# mocika-samsara

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/: README.en.md  commands.md  process.md  samsara-cli-impl.md  samsara-design.md  samsara-engineering.md
docs/research/layer-c/: LAYER_C_DECISION_GUIDE.md  RESEARCH_SUMMARY_TABLE.md  samsara_layer_c_research_2026.md
skills/self-evolution/: SKILL.md
src/: cli.rs  config.rs  error.rs  git.rs  i18n.rs  lib.rs  main.rs
src/commands/: archive.rs  demote.rs  domain.rs  init.rs  lint.rs  log.rs  mcp.rs  mod.rs  prime.rs  promote.rs  pull.rs  push.rs  reflect.rs  remote.rs  search.rs  self_update.rs  skill_note.rs  status.rs  write.rs
src/knowledge/: aaak.rs  index.rs  lesson.rs  log.rs  mod.rs  rules.rs
tests/: v01_commands.rs  v02_commands.rs  v03_commands.rs  v04_commands.rs  v05_commands.rs
tests/fixtures/existing_lesson/: INDEX.md  log.md
tests/fixtures/existing_lesson/lessons/rust/: cargo-fmt.md
tests/fixtures/promote_ready/: INDEX.md  log.md
tests/fixtures/promote_ready/lessons/rust/: cargo-fmt.md
tests/fixtures/search_mixed/: log.md
tests/fixtures/search_mixed/lessons/git/: rebase-stash.md
tests/fixtures/search_mixed/lessons/rust/: cargo-fmt.md
tests/fixtures/search_mixed/rules/: rust.md
