[package]
name = "samsara"
version = "0.1.1"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "AI Agent knowledge management CLI — write, promote, lint and reflect on lessons learned"

[[bin]]
name = "samsara"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
sha2 = "0.10"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
